--- a/rust/xprofiler-rs/Cargo.toml
+++ b/rust/xprofiler-rs/Cargo.toml
@@ -31,6 +31,7 @@ dashmap = "5.5"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 num_cpus = "1.16"
+backtrace = "0.3"
 
 [build-dependencies]
 napi-build = "2"
